# baseball-oracle

./: .env.example  .gitignore  .vercelignore  NOTICE.md  README.md  index.html  middleware.test.ts  middleware.ts  package-lock.json  package.json  tsconfig.server.json  vercel.json  vite.config.ts
modeling/: __init__.py  alpha_signal.py  arrival_calibration.py  arrival_corpus.py  arrival_external.py  arrival_hazard_baseline.py  arrival_holdout.py  arrival_holdout_amendment.py  arrival_sufficiency.py  arrival_validation.py  bootstrap.py  career_chapters.py  career_data.py  career_preview.py  career_tournament.py  contracts.py  evaluator_live_guard.py  milb_alpha_signal.py  milb_alpha_targets.py  milb_impact_tournament.py  prepare_dataset.py  provenance.py  pyproject.toml  relative_standing.py  risk_set.py  train_arrival_baseline.py  train_arrival_calibration.py  train_arrival_population.py  train_career_tournament.py  train_milb_impact.py
modeling/config/: arrival-validation-v2.json  s-tier-tournament-v1.json
modeling/tests/: test_alpha_signal.py  test_arrival_calibration.py  test_arrival_corpus.py  test_arrival_external.py  test_arrival_hazard_baseline.py  test_arrival_holdout.py  test_arrival_population.py  test_arrival_sufficiency.py  test_arrival_validation.py  test_career_chapters.py  test_career_data.py  test_career_preview.py  test_career_tournament.py  test_chadwick_key_mlbam_lookup.py  test_contracts.py  test_evaluator_live_guard.py  test_milb_alpha_signal.py  test_milb_alpha_targets.py  test_milb_impact_tournament.py  test_mlb_identity_crosswalk.py  test_prepare_dataset.py  test_relative_standing.py  test_risk_set.py  test_s_tier_protocol.py  (+2 more)
src/: App.css  (+5 more)
(+252 files in other folders)
