[project]
name = "baseball-oracle-modeling"
version = "0.1.0"
description = "Point-in-time data preparation and forward validation for Baseball Oracle"
requires-python = "==3.13.*"
dependencies = [
  "joblib>=1.4,<2",
  "pandas>=2.2,<3",
  "pyarrow>=18,<22",
  "scikit-learn>=1.6,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["contracts", "prepare_dataset", "train_arrival_baseline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
